--- a/css/styles.css
+++ b/css/styles.css
@@ -176,6 +176,7 @@ font-size: 16px;
 line-height: 1.88;
 letter-spacing: 0.06em;
 color:var(--secondary-color);}
+
 .heading-btn{display: inline-block;
     padding: 10px 32px;
     min-width: 200px;
@@ -190,8 +191,8 @@ color:var(--secondary-color);}
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);}
     .heading-btn:hover,
     .heading-btn:focus {
-        background-color: #188CE8;
-    }
+        background-color: #188CE8; }
+/*--------------------Modal---------------*/
     .backdrop {
         position: fixed;
         top: 0;
@@ -203,20 +204,17 @@ color:var(--secondary-color);}
         transform: scale(1);
         transition-property: transform, opacity;
         transition-duration: 250ms;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    }
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); }
+
     .backdrop.is-hidden {
         opacity: 0;
         pointer-events: none;
-        visibility: ;
         visibility: hidden;
-        transform: scale(0);
-    }
+        transform: scale(0); }
     
     .backdrop.is-hidden .modal {
         opacity: 0;
-        transform: translate(-50%, -50%) scale(0.5);
-    }
+        transform: translate(-50%, -50%) scale(0.5);}
     
     .modal {
         position: absolute;
@@ -227,13 +225,12 @@ color:var(--secondary-color);}
         width: 528px;
         height: 581px;
         padding: 15px;
-        background-color: var(--primary-background-color);
+        background-color: var(--secondary-color);
         box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
         border-radius: 4px;
         transition-property: transform, opacity;
         transition-duration: 250ms;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    }
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);}
     
     .modal-close-btn {
         position: absolute;
@@ -246,8 +243,45 @@ color:var(--secondary-color);}
         height: 30px;
         border: 1px solid rgba(0, 0, 0, 0.1);
         border-radius: 50%;
-        background-color: inherit;
-    }   
+        background-color: inherit;}   
+        /*.backdrop {
+            width: 100%;
+            height: 100%;
+            background-color: rgba(49, 50, 61, 0.443);
+            position: fixed;
+            top: 0;
+            transition: opacity 600ms, visibility 600ms;
+          }
+          .backdrop.is-hidden .modal {
+            transform: translate(0), scale(0), rotate(180deg);
+          }
+          .modal {
+            width: 528px;
+            min-height: 581px;
+            border-radius: 4px;
+            background-color: #ffffff;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%) scale(1) rotate(0);
+            transition: transform 300ms;
+          }
+          .modal-close-btn {
+            width: 30px;
+            height: 30px;
+            border: 1px solid rgba(0, 0, 0, 0.1);
+            border-radius: 50%;
+            position: absolute;
+            top: 8px;
+            right: 8px;
+            align-items: center;
+            justify-content: center;
+          }
+          .is-hidden {
+            visibility: none;
+            opacity: 0;
+            pointer-events: none;
+          }   */
 
 /*-----------Work-------------*/
 .antena::before{
@@ -588,13 +622,13 @@ color:var(--title-text-color);}
 background: var(--accent-color);
 color: var(--secondary-color);}
 
-.card{
+/*.card{
 padding: 20px 24px 20px 24px;
 background-color: var(--secondary-color);
 border-left:1px  solid;
 border-right:1px solid ;
 border-bottom:1px solid ;
-border-color: #ECECEC;}
+border-color: #ECECEC;}*/
  
 .flex-container img{
 display: block;
@@ -615,7 +649,7 @@ line-height:2;
 letter-spacing: 0.06em;
 color:var(--title-text-color);}
 
-.flex-container p{
+.flex-container-text{
 margin-top: 4px;
 font-size: 16px;
 line-height: 1.88;
@@ -625,7 +659,12 @@ color:var(--primary-text-color);}
 cursor: pointer;
 flex-basis: calc(100% / 3 - 60px);
 margin-right: 30px;
-margin-bottom: 30px;}
+margin-bottom: 30px;
+border: 1px solid #EEEEEE;
+transition-property: box-shadow;
+transition-duration: 250ms;
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);}
+
 .flex-element:nth-child(3n){margin-right: 0;}
 .flex-element:nth-last-child(-n+3){margin-bottom: 0;}
 .portfolio-link{display: block;}
@@ -634,3 +673,36 @@ margin-bottom: 30px;}
     0px 1px 1px rgba(0, 0, 0, 0.12), 
     0px 4px 4px rgba(0, 0, 0, 0.06), 
     1px 4px 6px rgba(0, 0, 0, 0.16)}
+
+.card{position: relative;
+    overflow: hidden;}
+.card-overlay{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(33, 150, 243, 0.9);
+    opacity: 0;
+    transform: translateY(100%);
+    transition-property: transform, opacity;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);}
+.card-overlay-text{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 63px 24px;
+    width: 100%;
+    height: 100%;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 1.56;
+    letter-spacing: 0.03em;
+    color: var(--secondary-color);}
+    .portfolio-link:hover .card-overlay,
+    .portfolio-link:focus .card-overlay{ 
+    opacity: 1;
+    transform: translateY(0);}
+    .card-group{padding: 20px 24px;}
