--- a/css/styles.css
+++ b/css/styles.css
@@ -79,7 +79,8 @@ align-items: center;}
 .mail, .tel:not(:last-child)
 {margin-right: 50px;}
 
-.mail,.tel{   
+.mail,.tel{  
+display: flex; 
 align-items: center;
 justify-content: space-around;
 font-weight: 500;
@@ -192,58 +193,8 @@ color:var(--secondary-color);}
     .heading-btn:focus {
         background-color: #188CE8; }
 /*--------------------Modal---------------*/
-    .backdrop {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.2);
-        opacity: 1;
-        transform: scale(1);
-        transition-property: transform, opacity;
-        transition-duration: 250ms;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); }
-
-    .backdrop.is-hidden {
-        opacity: 0;
-        pointer-events: none;
-        visibility: hidden;
-        transform: scale(0); }
-    
-    .backdrop.is-hidden .modal {
-        opacity: 0;
-        transform: translate(-50%, -50%) scale(0.5);}
-    
-    .modal {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        transform: translate(-50%, -50%) scale(1);
-        width: 528px;
-        height: 581px;
-        padding: 15px;
-        background-color: var(--secondary-color);
-        box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-        border-radius: 4px;
-        transition-property: transform, opacity;
-        transition-duration: 250ms;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);}
-    
-    .modal-close-btn {
-        position: absolute;
-        top: 8px;
-        right: 8px;
-        display: flex;
-        justify-content: center;
-        align-items: center;    
-        width: 30px;
-        height: 30px;
-        border: 1px solid rgba(0, 0, 0, 0.1);
-        border-radius: 50%;
-        background-color: inherit;}   
-        /*.backdrop {
+  
+        .backdrop {
             width: 100%;
             height: 100%;
             background-color: rgba(49, 50, 61, 0.443);
@@ -258,6 +209,7 @@ color:var(--secondary-color);}
             width: 528px;
             min-height: 581px;
             border-radius: 4px;
+            padding: 15px;
             background-color: #ffffff;
             position: absolute;
             top: 50%;
@@ -266,6 +218,7 @@ color:var(--secondary-color);}
             transition: transform 300ms;
           }
           .modal-close-btn {
+            display: flex;
             width: 30px;
             height: 30px;
             border: 1px solid rgba(0, 0, 0, 0.1);
@@ -280,7 +233,7 @@ color:var(--secondary-color);}
             visibility: none;
             opacity: 0;
             pointer-events: none;
-          }   */
+          }   
 
 /*-----------Work-------------*/
 .antena::before{
@@ -376,20 +329,17 @@ max-width: 100%;
 height: auto;}
 .about li{position: relative;}
 .about-text{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: absolute;
     bottom: 0;
     left: 0;
     width: 100%;
     height: 70px;
-    padding-top: 27px;
-    padding-bottom: 27px;
-
     background-color: rgba(47, 48, 58, 0.8);
     font-weight: 700;
-
-    text-align: center;
     text-transform: uppercase;
-
     color: #FFFFFF;
 }
 /*-------Team----------*/
@@ -503,7 +453,7 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);}
 .list-clients-item:hover, .list-clients-item:focus
 {color: var(--accent-color);
 border: 1px solid var(--accent-color);
-box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25)}
+}
 
 .logo-icon{fill: currentColor;}
 
